# PoinoTalkTrainer

./: .gitignore  README.md  config_template.jsonc  pyproject.toml  voice.json
src/poinotalktrainer/: synth.py  train.py  utils.py
