[project]
name = "poinotalktrainer"
version = "1.0.0"
description = "PoinoTalk Engineのモデルトレーナー"
authors = [
  { name = "KoharuYuzuki", email = "79073521+KoharuYuzuki@users.noreply.github.com" }
]
dependencies = [
    "tensorflow>=2.15.0",
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "pyworld>=0.3.4",
    "tensorflowjs>=4.17.0",
    "tqdm>=4.66.2",
]
readme = "README.md"
requires-python = ">=3.10,<3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/poinotalktrainer"]
